--- a/public/app/Styles/common.scss
+++ b/public/app/Styles/common.scss
@@ -1,5 +1,6 @@
 $sikija_color: tomato;
 $sikija_color_light: #ff7a57;
+$ddjob_color: #40b4ff;
 $light_line_color: #EAEAEA;
 $sub_menu_bar_bg: #707070;
 $light_gray_bg: #efefef;
