--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -28,9 +28,16 @@
       </tr>
     </table>
 
+    <div *ngIf="restaurants[0]" id="editors_restaurant" (click)="selectRestaurant(restaurants[0].id)">
+      <div id="title"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> 에디터 추천</div>
+      <div class="_pos_rel" id="image" [attr.data-bgsrc]="restaurants[0].image">
+        <div><i class="fa fa-quote-left" aria-hidden="true"></i> {{restaurants[0].desc}} <i class="fa fa-quote-right" aria-hidden="true"></i></div>
+      </div>
+    </div>
+
     <div id="jobs_section">
       <div id="jobs_bar" class="_float_con">
-        <span>일하자!</span>
+        <span><span>DDJob</span> 일하자!</span>
         <div class="_f_right" (click)="linkTo('http://job.ddhouse.co.kr')"><i class="fa fa-plus" aria-hidden="true"></i> 더보기</div>
       </div>
       <div id="jobs">
@@ -43,6 +50,10 @@
         </div>
       </div>
       <div id="tutoring" (click)="linkTo('http://job.ddhouse.co.kr/private-lesson')"><i class="fa fa-address-card-o" aria-hidden="true"></i> 과외광고 올리기</div>
+    </div>
+
+    <div id="to_modoo" (click)="linkTo('http://sikija.modoo.at/')">
+      <i class="fa fa-headphones" aria-hidden="true"></i> 배달업체 제보 ·오류 신고
     </div>
 
     <div id="create_icon" (click)="createIcon()">
