--- a/public/app/Styles/0_top_bar.css
+++ b/public/app/Styles/0_top_bar.css
@@ -18,7 +18,7 @@ a {
     clear: both; }
 
 ._light_gray_bg {
-  background-color: #efefef; }
+  background-color: #eae; }
 
 ._gray_bg {
   background-color: #bfbfbf; }
