--- a/public/app/Styles/2_dashboard.scss
+++ b/public/app/Styles/2_dashboard.scss
@@ -68,17 +68,52 @@
   margin-bottom: 12px;
 }
 
-#jobs_section {
-  & #jobs_bar {
-    background-color: $ddjob_color;
-    color: white;
+#editors_restaurant {
+  background-color: white;
+  & > #title {
     height: 44px;
-    line-height: 44px;
+    line-height: 46px;
+    padding: 0 12px;
+    font-size: 1.2em;
+    & i {
+      color: $sikija_color;
+    }
+  }
+  & > #image {
+    height: 240px;
+    & > div {
+      position: absolute;
+      width:100%;
+      left: 0px;
+      bottom: 0px;
+      height: 48px;
+      line-height: 50px;
+      font-size: 1.2em;
+      color: white;
+      background-color: rgba(0, 0, 0, 0.5);
+      text-align: center;
+      & i {
+        opacity: 0.5;
+      }
+    }
+  }
+}
+
+#jobs_section {
+  background-color: white;
+  & #jobs_bar {
+    border-bottom: 2px solid $ddjob_color;
+    height: 44px;
+    line-height: 46px;
     padding: 0 12px;
 
     & > span {
       font-size: 1.2em;
-      font-weight: bold;
+      & > span {
+        color: $ddjob_color;
+        font-weight: bold;
+        font-size: 0.8em;
+      }
     }
     & > div {
       margin: 0 8px;
@@ -91,6 +126,7 @@
     & > div {
       padding: 16px;
       border-bottom: 1px solid #eaeaea;
+      color: #555555;
       &:last-child {
         border-bottom: 0;
       }
@@ -119,6 +155,17 @@
     & > i {
       color: #bfbfbf;
     }
+  }
+}
+
+#to_modoo {
+  background-color: white;
+  height: 48px;
+  line-height: 50px;
+  padding: 0 12px;
+  font-size: 1.1em;
+  & i {
+    color: $sikija_color;
   }
 }
 
