--- a/public/app/Styles/common.scss
+++ b/public/app/Styles/common.scss
@@ -3,7 +3,7 @@ $sikija_color_light: #ff7a57;
 $ddjob_color: #40b4ff;
 $light_line_color: #EAEAEA;
 $sub_menu_bar_bg: #707070;
-$light_gray_bg: #efefef;
+$light_gray_bg: #eaeaea;
 $lightest_gray_bg: #fafafa;
 $gray_bg: #bfbfbf;
 $dark_gray_bg: #808080;
