--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -62,14 +62,13 @@
         홈 화면에 아이콘 추가
       </div>
       <div>
+        <i id="not_wicam_i" class="fa fa-exclamation-circle" aria-hidden="true"></i> 카톡에서 접속시 불가 - 인터냇 앱에서 '시키자.com'으로 접속해주세요 ^^
 
         <h1><i class="fa fa-android" aria-hidden="true"></i> 안드로이드: 인터넷 앱 또는 크롬에서</h1>
         화면 우측 상단의<img src="/app/Images/Interface/c_i_android.png">버튼을 누르고 <span>홈 화면에 추가</span>를 누르세요.
 
         <h1><i class="fa fa-android" aria-hidden="true"></i> 안드로이드: 네이버 앱에서</h1>
         화면 우측 하단의 <img src="/app/Images/Interface/c_i_naver.png">버튼을 누르고 <span>홈 화면 추가</span>를 누르세요.<br>
-
-        <i id="not_wicam_i" class="fa fa-exclamation-circle" aria-hidden="true"></i> 위캠에서 접속시 불가 - 인터냇 앱에서 '시키자.com'으로 접속해주세요 ^^
 
         <h1><i class="fa fa-apple" aria-hidden="true"></i> 아이폰에서</h1>
         <span>사파리</span>에서 접속(시키자.com) 후 툴바의 <img src="/app/Images/Interface/c_i_iphone.png"> 버튼을 누른 뒤 <span><i class="fa fa-plus-square" aria-hidden="true"></i> 홈 화면에 추가</span>를 누르세요.
