--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -40,6 +40,9 @@
         <span><span>DDJob</span> 일하자!</span>
         <div class="_f_right" (click)="linkTo('http://job.ddhouse.co.kr')"><i class="fa fa-plus" aria-hidden="true"></i> 더보기</div>
       </div>
+      <div class="video_container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/uzpGQ8soY2s" frameborder="0" allowfullscreen></iframe>
+      </div>
       <div id="jobs">
         <div *ngIf="jobs == []" id="jobs_loading">
           <i class="fa fa-circle-o-notch fa-spin fa-2x fa-fw"></i>
