--- a/public/app/Styles/2_dashboard.css
+++ b/public/app/Styles/2_dashboard.css
@@ -92,6 +92,7 @@ a {
     font-weight: bold; }
 
 #building_chat {
+  width: 100%;
   background-color: white;
   color: #555555;
   margin-bottom: 12px; }
@@ -165,6 +166,19 @@ a {
       text-align: center;
       color: tomato;
       padding: 8px; }
+  #jobs_section .video_container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden; }
+  #jobs_section .video_container iframe,
+  #jobs_section .video_container object,
+  #jobs_section .video_container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
   #jobs_section #tutoring {
     border-top: 1px dashed #40b4ff;
     padding: 14px;
