--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -56,7 +56,7 @@
     </div>
 
     <div id="to_modoo" (click)="linkTo('http://sikija.modoo.at/')">
-      <i class="fa fa-headphones" aria-hidden="true"></i> 배달업체 제보 ·오류 신고
+      <i class="fa fa-headphones" aria-hidden="true"></i> 업체제보 ·오류 신고 · 문의
     </div>
 
     <div id="create_icon" (click)="createIcon()">
