--- a/public/app/Styles/4_restaurant.scss
+++ b/public/app/Styles/4_restaurant.scss
@@ -23,6 +23,16 @@
   }
 }
 
+#update_notice {
+  padding: 12px;
+  border-bottom: 1px solid #b5c9ff;
+
+  #inform_restaurant {
+    margin-top: 4px;
+    color: #6c93ff;
+  }
+}
+
 .restaurant_item {
   padding: 20px 16px 18px 16px;
   border-bottom: 1px solid $light_line_color;
