--- a/public/app/Components/3_delivery/delivery.comp.html
+++ b/public/app/Components/3_delivery/delivery.comp.html
@@ -9,6 +9,12 @@
 </div>
 <div id="scroll_area" class="vertical" (scroll)="whenReachedBottom()">
   <div id="scroll_height">
+    <div id="update_notice">
+      목록에 없는 배달업체가 있다면 알려주세요.<br>
+      <div id="inform_delivery" (click)="linkTo('http://sikija.modoo.at/?link=5lojjbys')">
+        <i class="fa fa-plus-square-o" aria-hidden="true"></i> 제보하기
+      </div>
+    </div>
 
     <div class="delivery_item {{delivery.desc[locationId] == '' ? 'short' : 'tall'}}" *ngFor="let delivery of deliveries" (click)="selectDelivery(delivery.id)">
       <div class="delivery_name">{{delivery.name}}</div>
