--- a/public/app/Components/4_restaurant/restaurant.comp.html
+++ b/public/app/Components/4_restaurant/restaurant.comp.html
@@ -17,6 +17,12 @@
 </div>
 <div id="scroll_area" class="vertical" (scroll)="whenReachedBottom()">
   <div id="scroll_height">
+    <div id="update_notice">
+      블로거들이 인증한 맛집들이 꾸준히 소개됩니다.<br>
+      <div id="inform_restaurant" (click)="linkTo('http://sikija.modoo.at/?link=5nltgdly')">
+        <i class="fa fa-plus-square-o" aria-hidden="true"></i> 제보하기
+      </div>
+    </div>
     <div class="restaurant_item" *ngFor="let restaurant of restaurants" (click)="selectRestaurant(restaurant.id)">
       <div class="restaurant_info">
         {{dictionary.dongKor(restaurant.dong)}} ·
