--- a/public/app/Styles/3_delivery.css
+++ b/public/app/Styles/3_delivery.css
@@ -55,6 +55,13 @@ a {
   #bottom_bar:active {
     background-color: white; }
 
+#update_notice {
+  padding: 12px;
+  border-bottom: 1px solid #b5c9ff; }
+  #update_notice #inform_delivery {
+    margin-top: 4px;
+    color: #6c93ff; }
+
 .delivery_item {
   padding: 20px 16px 18px 16px;
   border-bottom: 1px solid #EAEAEA; }
