--- a/public/app/Styles/4_restaurant.css
+++ b/public/app/Styles/4_restaurant.css
@@ -74,6 +74,13 @@ a {
   -webkit-appearance: none;
   -moz-appearance: none; }
 
+#update_notice {
+  padding: 12px;
+  border-bottom: 1px solid #b5c9ff; }
+  #update_notice #inform_restaurant {
+    margin-top: 4px;
+    color: #6c93ff; }
+
 .restaurant_item {
   padding: 20px 16px 18px 16px;
   border-bottom: 1px solid #EAEAEA; }
