--- a/public/app/Styles/3_delivery.scss
+++ b/public/app/Styles/3_delivery.scss
@@ -3,6 +3,7 @@
 #update_notice {
   padding: 12px;
   border-bottom: 1px solid #b5c9ff;
+  background-color: $light_gray_bg;
 
   #inform_delivery {
     margin-top: 4px;
