--- a/public/app/Styles/4_restaurant.scss
+++ b/public/app/Styles/4_restaurant.scss
@@ -26,6 +26,7 @@
 #update_notice {
   padding: 12px;
   border-bottom: 1px solid #b5c9ff;
+  background-color: $light_gray_bg;
 
   #inform_restaurant {
     margin-top: 4px;
