open in internet app

--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -65,9 +65,9 @@
         홈 화면에 아이콘 추가
       </div>
       <div>
-        <i id="not_wicam_i" class="fa fa-exclamation-circle" aria-hidden="true"></i> 카톡에서 접속시 불가 - 인터냇 앱에서 '시키자.com'으로 접속해주세요 ^^
+        <i id="not_wicam_i" class="fa fa-exclamation-circle" aria-hidden="true"></i> 카톡, 페북에서 접속시 불가<br><span id="open_internet_app" (click)="linkTo('http://시키자.com')"><i class="fa fa-share-square-o" aria-hidden="true"></i> 인터넷 앱에서 열기</span>
 
-        <h1><i class="fa fa-android" aria-hidden="true"></i> 안드로이드: 인터넷 앱 또는 크롬에서</h1>
+        <h1><i class="fa fa-android" aria-hidden="true"></i> 안드로이드: 인터넷 앱(인터넷, 크롬 등)에서</h1>
         화면 우측 상단의<img src="/app/Images/Interface/c_i_android.png">버튼을 누르고 <span>홈 화면에 추가</span>를 누르세요.
 
         <h1><i class="fa fa-android" aria-hidden="true"></i> 안드로이드: 네이버 앱에서</h1>
