--- a/public/app/Styles/3_delivery.css
+++ b/public/app/Styles/3_delivery.css
@@ -58,7 +58,7 @@ a {
 #update_notice {
   padding: 12px;
   border-bottom: 1px solid #b5c9ff;
-  background-color: #eaeaea; }
+  background-color: #efefef; }
   #update_notice #inform_delivery {
     margin-top: 4px;
     color: #6c93ff; }
