--- a/public/app/Styles/common.scss
+++ b/public/app/Styles/common.scss
@@ -4,6 +4,7 @@ $ddjob_color: #40b4ff;
 $light_line_color: #EAEAEA;
 $sub_menu_bar_bg: #707070;
 $light_gray_bg: #eaeaea;
+$lighter_gray_bg: #efefef;
 $lightest_gray_bg: #fafafa;
 $gray_bg: #bfbfbf;
 $dark_gray_bg: #808080;
