--- a/public/app/Styles/4_restaurant.css
+++ b/public/app/Styles/4_restaurant.css
@@ -77,7 +77,7 @@ a {
 #update_notice {
   padding: 12px;
   border-bottom: 1px solid #b5c9ff;
-  background-color: #eaeaea; }
+  background-color: #efefef; }
   #update_notice #inform_restaurant {
     margin-top: 4px;
     color: #6c93ff; }
