--- a/public/app/Styles/2_dashboard.scss
+++ b/public/app/Styles/2_dashboard.scss
@@ -4,6 +4,8 @@
   padding: 12px;
   & > div {
     margin-bottom: 12px;
+    border-radius: 6px;
+    overflow: hidden;
   }
   & > div:last-child {
     margin-bottom: 0;
@@ -18,6 +20,7 @@
   }
   & > div > div {
     padding: 16px 0;
+    border-radius: 6px;
   }
   & img {
     width: 70px;
@@ -66,7 +69,6 @@
     vertical-align: middle;
     padding: 0 20px 0 12px;
   }
-  margin-bottom: 12px;
 }
 
 #editors_restaurant {
@@ -82,7 +84,9 @@
   }
   & > #image {
     height: 240px;
+    border-radius: 0 0 6px 6px;
     & > div {
+      border-radius: 0 0 6px 6px;
       position: absolute;
       width:100%;
       left: 0px;
