--- a/public/app/Components/4_restaurant/restaurant.comp.html
+++ b/public/app/Components/4_restaurant/restaurant.comp.html
@@ -30,6 +30,17 @@
       </div>
       <div class="restaurant_name">{{restaurant.name}}</div>
     </div>
+
+    <div *ngIf="isMore == 2" class="loading_more">
+      <i class="fa fa-circle-o-notch fa-spin fa-2x fa-fw"></i>
+    </div>
+    <div *ngIf="isMore == 1" class="loading_more">
+      Loading...
+    </div>
+    <div *ngIf="isMore == 0 && restaurants.length == 0" class="loading_more">
+      <i class="fa fa-ban" aria-hidden="true"></i>
+      등록된 식당이 없습니다.
+    </div>
   </div>
 </div>
 
