--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -2,6 +2,10 @@
 <div id="scroll_area" class="vertical _light_gray_bg">
   <div id="scroll_height">
 
+    <!--<div *ngIf="!loggedIn" id="facebook-login" (click)="fb_login()">-->
+      <!--<i class="fa fa-facebook-square" aria-hidden="true"></i> 페이스북 계정으로 로그인-->
+    <!--</div>-->
+
     <div id="delivery_or_restaurant" class="_float_con">
       <div id="to_delivery" (click)="toDelivery()">
         <div>
@@ -83,7 +87,7 @@
         <h1><i class="fa fa-android" aria-hidden="true"></i> 안드로이드: 네이버 앱에서</h1>
         화면 우측 하단의 <img src="/app/Images/Interface/c_i_naver.png">버튼을 누르고 <span>홈 화면 추가</span>를 누르세요.<br>
 
-        <h1><i class="fa fa-apple" aria-hidden="true"></i> 아이폰에서</h1>
+        <h1><i class="fa fa-apple" aria-hidden="true" (click)="fb_checkLogin()"></i> 아이폰에서</h1>
         <span>사파리</span>에서 접속(시키자.com) 후 툴바의 <img src="/app/Images/Interface/c_i_iphone.png"> 버튼을 누른 뒤 <span><i class="fa fa-plus-square" aria-hidden="true"></i> 홈 화면에 추가</span>를 누르세요.
 
         <div>
