Working On Facebook Login

--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -2,8 +2,11 @@
 <div id="scroll_area" class="vertical _light_gray_bg">
   <div id="scroll_height">
 
-    <!--<div *ngIf="!loggedIn" id="facebook-login" (click)="fb_login()">-->
+    <!--<div *ngIf="!loggedIn" class="facebook-btn" (click)="fb_login()">-->
       <!--<i class="fa fa-facebook-square" aria-hidden="true"></i> 페이스북 계정으로 로그인-->
+    <!--</div>-->
+    <!--<div *ngIf="loggedIn" class="facebook-btn" (click)="fb_logout()">-->
+      <!--<i class="fa fa-facebook-square" aria-hidden="true"></i> 로그아웃-->
     <!--</div>-->
 
     <div id="delivery_or_restaurant" class="_float_con">
