--- a/public/app/Styles/2_dashboard.scss
+++ b/public/app/Styles/2_dashboard.scss
@@ -12,7 +12,7 @@
   }
 }
 
-#facebook-login {
+.facebook-btn {
   text-align: center;
   background-color: #3b5998;
   padding: 12px 14px 10px 14px;
