--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -9,7 +9,7 @@
       <!--<i class="fa fa-facebook-square" aria-hidden="true"></i> 로그아웃-->
     <!--</div>-->
 
-    <div id="delivery_or_restaurant" class="_float_con">
+    <div id="delivery_and_restaurant" class="_float_con">
       <div id="to_delivery" (click)="toDelivery()">
         <div>
           <img src="/app/Images/Interface/to_delivery.png">
@@ -24,6 +24,22 @@
           <span>맛집탐방</span>
         </div>
       </div>
+
+      <div *ngIf="locationId == 1" id="to_cafeteria">
+        <div>
+          <img src="/app/Images/Interface/to_cafeteria.png">
+          <h1>학교밥!</h1>
+          <span>준비중</span>
+        </div>
+      </div>
+      <div *ngIf="locationId == 1" id="to_franchise">
+        <div>
+          <img src="/app/Images/Interface/to_franchise.png">
+          <h1>가맹점!</h1>
+          <span>준비중</span>
+        </div>
+      </div>
+
     </div>
 
     <div>
