--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -32,11 +32,11 @@
           <span>준비중</span>
         </div>
       </div>
-      <div *ngIf="locationId == 1" id="to_franchise">
+      <div *ngIf="locationId == 1" id="to_franchise" (click)="toFranchise()">
         <div>
           <img src="/app/Images/Interface/to_franchise.png">
           <h1>가맹점!</h1>
-          <span>준비중</span>
+          <span>할인혜택</span>
         </div>
       </div>
 
