--- a/public/app/Components/4_restaurant/restaurant_view.comp.html
+++ b/public/app/Components/4_restaurant/restaurant_view.comp.html
@@ -30,4 +30,11 @@
     </div>
   </div>
 
+  <div id="naver_search" (click)="goToLink('https://search.naver.com/search.naver?where=nexearch&query=' + dictionary.regionKor(restaurantDetail.region) + '+' + restaurantDetail.name)">
+    <div>
+      네이버에서 더 보기
+      <div></div>
+    </div>
+
+  </div>
 </div>
