--- a/public/app/Styles/4_restaurant.scss
+++ b/public/app/Styles/4_restaurant.scss
@@ -101,3 +101,31 @@
   color: $sikija_color;
   padding-top: 20px;
 }
+
+#naver_search {
+  padding: 20px;
+  text-align: center;
+  & > div {
+    display: inline-block;
+    width: 200px;
+    height: 48px;
+    box-sizing: border-box;
+    padding-left: 48px;
+    border: 1px solid #20c600;
+    border-radius: 8px;
+    overflow: hidden;
+    font-size: 1.1em;
+    line-height: 48px;
+    position: relative;
+    & > div {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 48px;
+      height: 48px;
+      background-image: url('/app/Images/Interface/naver_small_btn.png');
+      background-size: 48px 48px;
+      border-radius: 7px 0 0 7px;
+    }
+  }
+}
