--- a/public/app/Styles/5_franchise.css
+++ b/public/app/Styles/5_franchise.css
@@ -97,11 +97,28 @@ a {
       top: 3px;
       color: tomato;
       opacity: 0.5; }
-  .franchise_item img {
+  .franchise_item .naver_link {
     position: absolute;
     top: 16px;
     right: 16px;
-    width: 20px;
-    height: 20px; }
+    width: 24px;
+    height: 24px;
+    overflow: hidden;
+    border-radius: 4px; }
+    .franchise_item .naver_link img {
+      width: 24px;
+      height: 24px; }
+  .franchise_item .phone_call {
+    position: absolute;
+    top: 16px;
+    right: 48px;
+    width: 24px;
+    height: 24px;
+    line-height: 26px;
+    text-align: center;
+    overflow: hidden;
+    border-radius: 4px;
+    background-color: tomato;
+    color: white; }
 
 /*# sourceMappingURL=5_franchise.css.map */
