--- a/public/app/Components/2_dashboard/dashboard.comp.html
+++ b/public/app/Components/2_dashboard/dashboard.comp.html
@@ -2,10 +2,10 @@
 <div id="scroll_area" class="vertical _light_gray_bg">
   <div id="scroll_height">
 
-    <!--<div *ngIf="!loggedIn" class="facebook-btn" (click)="fb_login()">-->
+    <!--<div *ngIf="!fbService.loggedIn" class="facebook-btn" (click)="fbService.fb_login()">-->
       <!--<i class="fa fa-facebook-square" aria-hidden="true"></i> 페이스북 계정으로 로그인-->
     <!--</div>-->
-    <!--<div *ngIf="loggedIn" class="facebook-btn" (click)="fb_logout()">-->
+    <!--<div *ngIf="fbService.loggedIn" class="facebook-btn" (click)="fbService.fb_logout()">-->
       <!--<i class="fa fa-facebook-square" aria-hidden="true"></i> 로그아웃-->
     <!--</div>-->
 
