--- a/public/app/Components/4_restaurant/restaurant.comp.html
+++ b/public/app/Components/4_restaurant/restaurant.comp.html
@@ -11,7 +11,7 @@
               [attr.selected]="restaurantState.dongId == key ? true : null"
       >{{dictionary.dongKor(key)}}</option>
     </select>
-    <i class="fa fa-chevron-down" aria-hidden="true"></i>
+    <i class="fa fa-caret-down" aria-hidden="true"></i>
   </div>
   <div>
     <select id="category_select" (change)="selectCategory()">
@@ -24,7 +24,7 @@
               [attr.selected]="restaurantState.categoryId == key ? true : null"
       >{{dictionary.resCatKor(key)}}</option>
     </select>
-    <i class="fa fa-chevron-down" aria-hidden="true"></i>
+    <i class="fa fa-caret-down" aria-hidden="true"></i>
   </div>
 </div>
 <div id="scroll_area" class="vertical" (scroll)="whenReachedBottom()">
